--- a/css/variables.css
+++ b/css/variables.css
@@ -1,13 +1,15 @@
 :root {
+  --nibble-dark: #000000;
   --nibble-red: #FF1000;
+  --nibble-gray: #595F68;
   --nibble-dark-gray: #2C2F32;
+  --nibble-circle-top-left: #D3BBE0;
+  --nibble-circle-bottom-left: #FFD280;
+  --nibble-circle-top-right: #D0EAEF;
+  --nibble-circle-bottom-right: #CCA5C6;
   --nibble-purple:  #9D71C7;
   --nibble-dark-purple: #5A2C83;
-  --nibble-light-purple: #D3BBE0;
-  --nibble-light-blue: #D0EAEF;
-  --nibble-yellow: #FFD280;
   --nibble-bg-main: #F8F8FF;
-  --nibble-bg-gradient: radial-gradient(138.23% 138.23% at 50% 50%, rgba(255, 255, 255, 0.40) 0%, rgba(255, 255, 255, 0.00) 100%), url(<path-to-image>), lightgray 1442.072px 428.568px / -100.475% -162.766% no-repeat;
 
   --nibble-normal-font-size: 16px;
 
